[gd_scene load_steps=2 format=3 uid="uid://b4pqa4soljhb7"]

[ext_resource type="Script" uid="uid://dj1m8nhk3n1fa" path="res://scripts/damage_giver.gd" id="1_2mgi5"]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_2mgi5")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
